<resources>
    <string name="app_name" translatable="false">SimpleDimpleDraw</string>
    <string name="appBarMenu">Menu</string>
    <string name="appBarColor">Color</string>
    <string name="appBarSave">Save</string>
    <string name="appBarClear">Clear</string>
    <string name="fabText">Draw</string>
    <string name="shapesSelect">Select shapes</string>
    <string name="roundSize">Round size</string>
    <string name="menu">Menu</string>
    <string name="aboutMenu">About</string>
    <string name="sizeRadius">Radius (default is 10)</string>
    <string name="captureDialog">Canvas captured</string>
    <string name="color_background">Color background</string>
    <string name="color_drawing">Color drawing</string>
    <string name="erase">Erase</string>
    <string name="share">Share</string>
    <string name="setFigure">Set figure</string>
    <string name="about">About</string>
    <string name="hide_down_bar">Hide down bar</string>
    <string name="add_a_oval">Add a oval</string>
    <string name="add_a_rectangle">Add a rectangle</string>
    <string name="add_a_circle">Add a circle</string>
    <string name="hidden_menu">Hidden menu</string>
    <string name="set_drawing_color">Set drawing color</string>
    <string name="close_menu">Close menu</string>
    <string name="set_background_color">Set background color</string>
    <string name="clear_canvas">Clear canvas</string>
    <string name="settings">Settings</string>
    <string name="redo_button">Redo button</string>
    <string name="undo_button">Undo button</string>
    <string name="add_rectangle">Add rectangle</string>
    <string name="add_oval">Add oval</string>
    <string name="add_circle">Add circle</string>
    <string name="show_all">Show all</string>
</resources>