<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/appBarShapes"
        android:icon="@drawable/outline_category_white_18dp"
        android:title="@string/appBarShapes" />

    <item
        android:id="@+id/appBarColor"
        android:icon="@drawable/outline_color_lens_white_18dp"
        android:title="@string/appBarColor" />

    <item
        android:id="@+id/appBarAbout"
        android:icon="@drawable/outline_menu_white_18dp"
        android:title="" />

    <item
        android:id="@+id/appBarSave"
        android:icon="@drawable/outline_save_alt_white_18dp"
        android:title="@string/appBarSave" />


    <item
        android:id="@+id/appBarClear"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/appBarClear"/>

</menu>