<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <org.l3ger0j.simpledimpledraw.SimpleDimpleDrawingView
        android:id="@+id/simpleDrawingView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <org.l3ger0j.simpledimpledraw.ShapeManager
        android:id="@+id/shapeManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_appbar_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:contentDescription="@string/fabText"
        android:focusable="true"
        android:src="@drawable/baseline_create_24"
        app:backgroundTint="#1E88E5"
        app:elevation="8dp"
        app:layout_anchor="@+id/bottomAppbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabHiddenMenu"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/hidden_menu"
            android:visibility="gone"
            app:backgroundTint="#1E88E5" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSetDrawColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:srcCompat="@drawable/baseline_colorize_24"
            android:contentDescription="@string/set_drawing_color" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSetBackgroundColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:srcCompat="@drawable/baseline_format_color_fill_24"
            android:contentDescription="@string/set_background_color" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabEraser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:rotation="180"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:srcCompat="@drawable/baseline_create_24"
            android:contentDescription="@string/erase" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabClearCanvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:srcCompat="@drawable/baseline_delete_24"
            android:contentDescription="@string/clear_canvas" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabCloseMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:visibility="gone"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="mini"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/close_menu" />
    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setFigure"
        android:visibility="gone" />

</FrameLayout>